--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-paper": "^4.12.2",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.13.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
   },
