update icon for android

--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "expense-tracker-native",
+    "name": "Expense Tracker",
     "slug": "expense-tracker-native",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/ic_launcher.png",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
